feat: added more data, fixed broken tests
