# backend/src/main/java/craftcode/workshop/beer/enums/BeerType.java
@@ -4,5 +4,16 @@ public enum BeerType {
     ALCOHOL_FREE,
     ALE,
     FRUIT,
-    CHERRY
+    CHERRY,
+    AMBER,
+    STRONG_ALE,
+    PALE_ALE,
+    FLEMISH_RED,
+    TRIPLE,
+    TRAPPIST,
+    BELGIAN_BLONDE,
+    WITBIER,
+    STOUT,
+    LAGER,
+    WEISSBIER
 }
