# frontend-beer-frontier/openapi.yaml
@@ -3,7 +3,7 @@ info:
   title: OpenAPI definition
   version: v0
 servers:
-  - url: http://localhost:8080
+  - url: http://localhost:8080/api
     description: Generated server url
 paths:
   /classifications/{id}:
@@ -49,6 +49,20 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Classification'
+    delete:
+      tags:
+        - classification-controller
+      operationId: deleteClassification
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: OK
   /breweries/{id}:
     get:
       tags:
@@ -92,6 +106,20 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Brewery'
+    delete:
+      tags:
+        - brewery-controller
+      operationId: deleteBreweryById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: OK
   /beers/{id}:
     get:
       tags:
@@ -149,6 +177,68 @@ paths:
       responses:
         '200':
           description: OK
+  /classifications:
+    get:
+      tags:
+        - classification-controller
+      operationId: getClassification
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Classification'
+    post:
+      tags:
+        - classification-controller
+      operationId: saveClassification
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Classification'
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Classification'
+  /breweries:
+    get:
+      tags:
+        - brewery-controller
+      operationId: getBreweries
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Brewery'
+    post:
+      tags:
+        - brewery-controller
+      operationId: saveBrewery
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Brewery'
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Brewery'
   /beers:
     get:
       tags:
@@ -189,11 +279,17 @@ paths:
         '200':
           description: OK
           content: {}
-  /classifications:
+  /beers/search:
     get:
       tags:
-        - classification-controller
-      operationId: getClassification
+        - beer-controller
+      operationId: searchBeers
+      parameters:
+        - name: searchTerm
+          in: query
+          required: true
+          schema:
+            type: string
       responses:
         '200':
           description: OK
@@ -202,21 +298,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Classification'
-  /breweries:
-    get:
-      tags:
-        - brewery-controller
-      operationId: getBreweries
-      responses:
-        '200':
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Brewery'
+                  $ref: '#/components/schemas/Beer'
   /beers/by-brewery/{breweryId}:
     get:
       tags:
@@ -279,6 +361,17 @@ components:
             - ALE
             - FRUIT
             - CHERRY
+            - AMBER
+            - STRONG_ALE
+            - PALE_ALE
+            - FLEMISH_RED
+            - TRIPLE
+            - TRAPPIST
+            - BELGIAN_BLONDE
+            - WITBIER
+            - STOUT
+            - LAGER
+            - WEISSBIER
         brewery:
           $ref: '#/components/schemas/Brewery'
         classification:
@@ -307,10 +400,16 @@ components:
             - AMERICA
             - SPAIN
             - FRANCE
+            - USA
+            - CZECH
+            - UK
+            - IRELAND
+            - AUSTRIA
+            - NETHERLANDS
         usedGrainType:
           type: string
           enum:
-            - BARELY
+            - BARLEY
             - WHEAT
             - CORN
             - BASE_MALT
@@ -328,6 +427,14 @@ components:
             - ABBEY_BEER
             - TRAPPIST_BEER
             - DARK_BEER
+            - SAISON
+            - PALE_ALE
+            - BITTER
+            - STOUT
+            - LAMBIC
+            - PILSNER
+            - TRIPLE
+            - LAGER
         beers:
           uniqueItems: true
           type: array
