# frontend-beer-frontier/src/app/api/models/Classification.ts
@@ -1,10 +1,11 @@
+/* tslint:disable */
 /* eslint-disable */
 /**
  * OpenAPI definition
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * The version of the OpenAPI document: v0
- *
+ * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
@@ -13,150 +14,155 @@
 
 import { mapValues } from '../runtime';
 import type { Beer } from './Beer';
-import { BeerFromJSON, BeerFromJSONTyped, BeerToJSON } from './Beer';
+import {
+    BeerFromJSON,
+    BeerFromJSONTyped,
+    BeerToJSON,
+} from './Beer';
 
 /**
- *
+ * 
  * @export
  * @interface Classification
  */
 export interface Classification {
-  /**
-   *
-   * @type {number}
-   * @memberof Classification
-   */
-  id?: number;
-  /**
-   *
-   * @type {string}
-   * @memberof Classification
-   */
-  country?: ClassificationCountryEnum;
-  /**
-   *
-   * @type {string}
-   * @memberof Classification
-   */
-  usedGrainType?: ClassificationUsedGrainTypeEnum;
-  /**
-   *
-   * @type {string}
-   * @memberof Classification
-   */
-  fermentationType?: ClassificationFermentationTypeEnum;
-  /**
-   *
-   * @type {string}
-   * @memberof Classification
-   */
-  namesAndOrigins?: ClassificationNamesAndOriginsEnum;
-  /**
-   *
-   * @type {Set<Beer>}
-   * @memberof Classification
-   */
-  beers?: Set<Beer>;
+    /**
+     * 
+     * @type {number}
+     * @memberof Classification
+     */
+    id?: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof Classification
+     */
+    country?: ClassificationCountryEnum;
+    /**
+     * 
+     * @type {string}
+     * @memberof Classification
+     */
+    usedGrainType?: ClassificationUsedGrainTypeEnum;
+    /**
+     * 
+     * @type {string}
+     * @memberof Classification
+     */
+    fermentationType?: ClassificationFermentationTypeEnum;
+    /**
+     * 
+     * @type {string}
+     * @memberof Classification
+     */
+    namesAndOrigins?: ClassificationNamesAndOriginsEnum;
+    /**
+     * 
+     * @type {Set<Beer>}
+     * @memberof Classification
+     */
+    beers?: Set<Beer>;
 }
+
 
 /**
  * @export
  */
 export const ClassificationCountryEnum = {
-  Belgium: 'BELGIUM',
-  Germany: 'GERMANY',
-  America: 'AMERICA',
-  Spain: 'SPAIN',
-  France: 'FRANCE',
+    Belgium: 'BELGIUM',
+    Germany: 'GERMANY',
+    America: 'AMERICA',
+    Spain: 'SPAIN',
+    France: 'FRANCE',
+    Usa: 'USA',
+    Czech: 'CZECH',
+    Uk: 'UK',
+    Ireland: 'IRELAND',
+    Austria: 'AUSTRIA',
+    Netherlands: 'NETHERLANDS'
 } as const;
-export type ClassificationCountryEnum =
-  (typeof ClassificationCountryEnum)[keyof typeof ClassificationCountryEnum];
+export type ClassificationCountryEnum = typeof ClassificationCountryEnum[keyof typeof ClassificationCountryEnum];
 
 /**
  * @export
  */
 export const ClassificationUsedGrainTypeEnum = {
-  Barely: 'BARELY',
-  Wheat: 'WHEAT',
-  Corn: 'CORN',
-  BaseMalt: 'BASE_MALT',
-  Oats: 'OATS',
+    Barley: 'BARLEY',
+    Wheat: 'WHEAT',
+    Corn: 'CORN',
+    BaseMalt: 'BASE_MALT',
+    Oats: 'OATS'
 } as const;
-export type ClassificationUsedGrainTypeEnum =
-  (typeof ClassificationUsedGrainTypeEnum)[keyof typeof ClassificationUsedGrainTypeEnum];
+export type ClassificationUsedGrainTypeEnum = typeof ClassificationUsedGrainTypeEnum[keyof typeof ClassificationUsedGrainTypeEnum];
 
 /**
  * @export
  */
 export const ClassificationFermentationTypeEnum = {
-  Warm: 'WARM',
-  Cool: 'COOL',
-  Wild: 'WILD',
-  Spontaneous: 'SPONTANEOUS',
+    Warm: 'WARM',
+    Cool: 'COOL',
+    Wild: 'WILD',
+    Spontaneous: 'SPONTANEOUS'
 } as const;
-export type ClassificationFermentationTypeEnum =
-  (typeof ClassificationFermentationTypeEnum)[keyof typeof ClassificationFermentationTypeEnum];
+export type ClassificationFermentationTypeEnum = typeof ClassificationFermentationTypeEnum[keyof typeof ClassificationFermentationTypeEnum];
 
 /**
  * @export
  */
 export const ClassificationNamesAndOriginsEnum = {
-  AbbeyBeer: 'ABBEY_BEER',
-  TrappistBeer: 'TRAPPIST_BEER',
-  DarkBeer: 'DARK_BEER',
+    AbbeyBeer: 'ABBEY_BEER',
+    TrappistBeer: 'TRAPPIST_BEER',
+    DarkBeer: 'DARK_BEER',
+    Saison: 'SAISON',
+    PaleAle: 'PALE_ALE',
+    Bitter: 'BITTER',
+    Stout: 'STOUT',
+    Lambic: 'LAMBIC',
+    Pilsner: 'PILSNER',
+    Triple: 'TRIPLE',
+    Lager: 'LAGER'
 } as const;
-export type ClassificationNamesAndOriginsEnum =
-  (typeof ClassificationNamesAndOriginsEnum)[keyof typeof ClassificationNamesAndOriginsEnum];
+export type ClassificationNamesAndOriginsEnum = typeof ClassificationNamesAndOriginsEnum[keyof typeof ClassificationNamesAndOriginsEnum];
+
 
 /**
  * Check if a given object implements the Classification interface.
  */
-export function instanceOfClassification(
-  value: object
-): value is Classification {
-  return true;
+export function instanceOfClassification(value: object): value is Classification {
+    return true;
 }
 
 export function ClassificationFromJSON(json: any): Classification {
-  return ClassificationFromJSONTyped(json, false);
+    return ClassificationFromJSONTyped(json, false);
 }
 
-export function ClassificationFromJSONTyped(
-  json: any,
-  ignoreDiscriminator: boolean
-): Classification {
-  if (json == null) {
-    return json;
-  }
-  return {
-    id: json['id'] == null ? undefined : json['id'],
-    country: json['country'] == null ? undefined : json['country'],
-    usedGrainType:
-      json['usedGrainType'] == null ? undefined : json['usedGrainType'],
-    fermentationType:
-      json['fermentationType'] == null ? undefined : json['fermentationType'],
-    namesAndOrigins:
-      json['namesAndOrigins'] == null ? undefined : json['namesAndOrigins'],
-    beers:
-      json['beers'] == null
-        ? undefined
-        : new Set((json['beers'] as Array<any>).map(BeerFromJSON)),
-  };
+export function ClassificationFromJSONTyped(json: any, ignoreDiscriminator: boolean): Classification {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'] == null ? undefined : json['id'],
+        'country': json['country'] == null ? undefined : json['country'],
+        'usedGrainType': json['usedGrainType'] == null ? undefined : json['usedGrainType'],
+        'fermentationType': json['fermentationType'] == null ? undefined : json['fermentationType'],
+        'namesAndOrigins': json['namesAndOrigins'] == null ? undefined : json['namesAndOrigins'],
+        'beers': json['beers'] == null ? undefined : (new Set((json['beers'] as Array<any>).map(BeerFromJSON))),
+    };
 }
 
 export function ClassificationToJSON(value?: Classification | null): any {
-  if (value == null) {
-    return value;
-  }
-  return {
-    id: value['id'],
-    country: value['country'],
-    usedGrainType: value['usedGrainType'],
-    fermentationType: value['fermentationType'],
-    namesAndOrigins: value['namesAndOrigins'],
-    beers:
-      value['beers'] == null
-        ? undefined
-        : Array.from(value['beers'] as Set<any>).map(BeerToJSON),
-  };
+    if (value == null) {
+        return value;
+    }
+    return {
+        
+        'id': value['id'],
+        'country': value['country'],
+        'usedGrainType': value['usedGrainType'],
+        'fermentationType': value['fermentationType'],
+        'namesAndOrigins': value['namesAndOrigins'],
+        'beers': value['beers'] == null ? undefined : (Array.from(value['beers'] as Set<any>).map(BeerToJSON)),
+    };
 }
+
